--- a/develop/styles/styles.scss
+++ b/develop/styles/styles.scss
@@ -1,4 +1,49 @@
+@import "compass/css3/inline-block";
+
 body {
-  background-color: #CD6090;    
 }
 
+h1 {
+  margin: 0;  
+}
+
+.topbar {
+  width: 100%;
+  height: 50px;
+  background-color: #000;
+
+  .logo {
+    @include inline-block;
+    float: left;
+  }
+  .logo-name {
+    color: #fff;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: normal;
+  }
+  .logo-slogan {
+    color: #fff;
+  }
+}
+.navbar {
+  @include inline-block;
+  float: right;
+}
+.main-menu {
+  list-style: none;
+  .item {
+    display: inline;
+  }
+}
+
+.slider {
+  width: 100%;
+  height: 500px;
+  background-color: #CD6090;
+}
+.search {
+  width: 100%;
+  height: 100px;
+  background-color: #BFEFFF;
+}
