--- a/develop/styles/styles.scss
+++ b/develop/styles/styles.scss
@@ -1,6 +1,9 @@
-@import "compass/css3/inline-block";
+@import 
+  "compass/css3/inline-block",
+  "compass/css3/border-radius";
 
 body {
+  background-color: #BFEFFF;
 }
 
 h1 {
@@ -35,6 +38,10 @@ h1 {
   .item {
     display: inline;
   }
+  .nav {
+    color: #fff;
+    text-decoration: none;
+  }
 }
 
 .slider {
@@ -44,6 +51,44 @@ h1 {
 }
 .search {
   width: 100%;
-  height: 100px;
-  background-color: #BFEFFF;
+  height: 65px;
+  background-color: #fff;
+  position: relative;
+  padding-top: 20px;
+
+  .input-search {
+    @include border-radius(2px);
+    border: 3px solid #DFDFDF;
+    background-color: #ECECEC;
+    width: 76%;
+    padding: 10px 15px;
+    outline: none;
+    float: left;
+    margin: 0 1% 0 2%;
+  }
+  .btn-search {
+    @include border-radius(2px);
+    background-color: #E83B25;
+    border: 3px solid #E83B25;
+    width: 8%;
+    color: #fff;
+    padding: 10px;
+    text-transform: uppercase;
+    outline: none;
+    font-weight: bold;
+    float: left;
+    margin: 0 1% 0 0;
+  }
+  .btn-category {
+    @include border-radius(2px);
+    background-color: #FFE4B5;
+    border: 3px solid #FFE4B5;
+    width: 8%;
+    color: #D2B48C;
+    padding: 10px;
+    text-transform: uppercase;
+    outline: none; 
+    font-weight: bold;
+    float: left;
+  }
 }
