--- a/develop/styles/styles.scss
+++ b/develop/styles/styles.scss
@@ -1,7 +1,9 @@
 @import 
-  "compass/css3/inline-block",
   "compass/css3/box-sizing",
   "compass/css3/border-radius";
+
+::-moz-selection { color: #fff;  background: #FF1493; }
+::selection      { color: #fff;  background: #FF1493; }
 
 body {
   font-family: 'Dosis';
@@ -15,52 +17,142 @@ h1 {
 
 .topbar {
   width: 100%;
-  height: 50px;
+  min-width: 1200px;
+  height: 48px;
   background: #383838 image-url('opacity.png');
 
   .logo {
-    @include inline-block;
+    display: inline-block;
     float: left;
-    width: 450px;
     height: 100%;
   }
   .logo-name {
     // #FFEC8B
+    height: 100%;
     color: #BFEFFF;
     text-decoration: none;
     font-family: 'Lobster';
     font-style: normal;
-    font-size: 30px;
+    font-size: 36px;
     display: inline-block;
-    padding: 4px 0 0 10px;
+    padding: 0 0 0 10px;
     &:hover {
       color: #FFEC8B;
     }
   }
   .logo-slogan {
     color: #fff;
-    font-family: 'Dosis';
+    font-family: 'Open Sans';
     font-style: normal;
-    font-weight: 200;
-    font-style: normal;
-    font-size: 14px;
+    font-weight: 300;
+    font-size: 13px;
     display: inline-block;
   }
 }
 .navbar {
-  @include inline-block;
   float: right;
-  width: 400px;
+  margin: 0;
+  height: 100%;
 }
 .main-menu {
   list-style: none;
-  text-indent: -99999px;
+  margin: 0;
+  overflow: hidden;
+  padding-left: 0;
+  height: 100%;
   .item {
-    display: inline;
+    float: left;
+    height: 100%;
+    &.ico-roupas-e-moda {
+      .nav {
+        background-position: 2px -321px;
+        &:hover {
+          background-position: 2px -288px;
+        }
+      }  
+    }
+    &.ico-calcados {
+      .nav {
+        background-position: -337px -321px;
+        &:hover {
+          background-position: -337px -288px;
+        }
+      }
+    }
+    &.ico-joias-e-relogios {
+      .nav {
+        background-position: -95px -321px;
+        &:hover {
+          background-position: -95px -288px;
+        }
+      }
+    }
+    &.ico-bolsas-e-viagem {
+      .nav {
+        background-position: -48px -321px;
+        &:hover {
+          background-position: -48px -288px;
+        }
+      }
+    }
+    &.ico-saude-e-beleza {
+      .nav {
+        background-position: -288px -321px;
+        &:hover {
+          background-position: -288px -288px;
+        }
+      }
+    }
+    &.ico-esportes {
+      .nav {
+        background-position: -198px -321px;
+        &:hover {
+          background-position: -198px -288px;
+        }
+      }
+    }
+    &.ico-eletro {
+      .nav {
+        background-position: -148px -321px;
+        &:hover {
+          background-position: -148px -288px;
+        }
+      }
+    }
+    &.ico-casa {
+      .nav {
+        background-position: -241px -321px;
+        &:hover {
+          background-position: -241px -288px;
+        }
+      }
+    }
+    &.ico-livros {
+      .nav {
+        background-position: -380px -321px;
+        &:hover {
+          background-position: -380px -288px;
+        }
+      }
+    }
+    &.ico-outros {
+      .nav {
+        background-position: -420px -321px;
+        &:hover {
+          background-position: -420px -288px;
+        }
+      }
+    }
   }
   .nav {
-    color: #fff;
-    text-decoration: none;
+    width: 50px;
+    height: 30px;
+    padding: 9px 0;
+    display: inline-block;
+    background: image-url('assets.png');
+    b {
+      display: none;
+    }
   }
 }
 
@@ -76,7 +168,7 @@ h1 {
     color: #fff;
     text-decoration: none;
     display: inline-block;
-    padding: 15px;
+    padding: 14px;
     letter-spacing: 0.02em;
     &:hover {
       background-color: #00BFFF;
