--- a/develop/styles/styles.scss
+++ b/develop/styles/styles.scss
@@ -18,12 +18,17 @@ h1 {
 
 .topbar {
   width: 100%;
-  min-width: 1200px;
+  min-width: 1180px;
   height: 48px;
   background: rgba(25,25,112 ,0.8) image-url('opacity.png');
   position: fixed;
   z-index: 2;
   top: 0;
+
+  .container {
+    width: 1180px;
+    margin: 0 auto;
+  }
 
   .logo {
     display: inline-block;
@@ -188,12 +193,12 @@ h1 {
 .box-search {
   float: left;
   width: 100%;
-  background: rgba(000,000,000,0.8);
+  background: rgba(000,000,000,0.7);
   position: relative;
 
   .form-search {
     left: 50%;
-    margin-left: -520px;
+    margin-left: -580px;
     position: relative;
   }
 
@@ -204,8 +209,9 @@ h1 {
     margin: 10px 0;
     outline: none;
     float: left;
-    width: 600px;
-    font-weight: 600;
+    width: 710px;
+    font-style: normal;
+    font-weight: 300;
     color: #fff;
     &:focus {
       border: 2px solid #FFD700;
@@ -223,6 +229,33 @@ h1 {
     left: -50px;
     top: 10px;
   }
+  ::-webkit-input-placeholder {
+    color: #fff;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+  }
+
+  :-moz-placeholder {
+    color: #fff;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+  }
+
+  ::-moz-placeholder {
+    color: #fff;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+  }
+
+  :-ms-input-placeholder {  
+    color: #fff;
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 300;
+  }
   .ex {
     color: #a6a6a6;
     font-size: 12px;
@@ -239,6 +272,12 @@ h1 {
   }
 }
 
+.main {
+  width: 100%;
+  background-color: #fff;
+  overflow: hidden;
+}
+
 .content {
   width: 100%;
   overflow: hidden;
@@ -246,6 +285,11 @@ h1 {
   top: 535px;
   z-index: 1;
   border-top: 2px solid #FFD700;
+  .container {
+    width: 1160px;
+    margin: 0 auto;
+    padding: 0 10px;
+  }
 }
 
 .carousel {
@@ -267,7 +311,55 @@ h1 {
 }
 
 .offers {
-  width: 100%;
-  background: #fff;
+  width: 850px;
   overflow: hidden;
+  padding-top: 40px;
+
+  .offer {
+    overflow: hidden;
+    width: 825px;
+    border-bottom: 1px solid #292929;
+    border-left: 5px solid #FFD700;
+    padding: 10px;
+    position: relative;
+    margin-bottom: 20px;
+  }
+  .store-img {
+    float: left;
+    margin-right: 10px;
+  }
+  .cupon-info {
+    float: left;
+    width: 580px;
+  }
+  .coupon-header {
+    font-size: 12px;
+  }
+  .item-title {
+    font-size: 22px;
+    margin: 0;
+  }
+  .item-desc {
+    font-size: 12px;
+    margin: 0;
+  }
+  .item-code {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    a {
+      display: inline-block;
+      text-decoration: none;
+      color: #fff;
+      font-family: 'Lobster';
+      font-style: normal;
+      letter-spacing: 0.06em;
+      font-size: 20px;
+      background-color: #5D478B;
+      padding: 10px 20px 10px;
+      &:hover {
+        background-color: #00BFFF;
+      }
+    }
+  }
 }
